--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,4 @@
-<footer>
-    <div id="footer">
-        <div class="container">
-            <p class="text-muted">© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
-            <a href="http://www.github.com/biomadeira/sustain">sustain</a></p>
-        </div>
-    </div>
-</footer>
-<div class="footer"></div>
+{% if site.harmony.show_disclaimer %}
+	Made by <a href="http://gayan.me" target="_blank">Gayan Virajith</a> For everyone.      
+{% endif %}
+Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>
