--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,11 @@
 ---
-layout: layout
+layout: default
 ---
-
-{{ content }}
+<div class="page-content wc-container">
+	<div class="post">
+		<h1>{{ page.title }}</h1>
+		<div class="post">
+			{{ content }}
+		</div>
+	</div>
+</div>
