--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,40 +1,57 @@
 ---
-layout: layout
+layout: default
 ---
 
-<div class="container">
-	<div class="blog-post">
-		<h3>
-		  <strong><a href="{{ page.url }}">{{ page.title }}</a></strong>
-		</h3>
-	</div>
-	<div class="blog-title">
-		<h4>
-		{{ page.date | date: "%B %e, %Y" }}
-			&nbsp;&nbsp;
-			{% for tag in page.tags %}
-			 <span class="label label-success">{{ tag }}</span>
-			{% endfor %}
-		</h4>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-body">
-			<h4>
-			  {{ content }}
-			   <hr>
-			   <div class="related-posts">
-				   <h4>Related Posts</h4>
-				   {% for post in site.related_posts limit:3 %}
-						<div class="row">
-							 <div class="col-sm-4 col-md-4 col-lg-4"><h6 style="text-align: right">
-								 {{ post.date | date: "%B %e, %Y" }}</h6></div>
-							 <div class="col-sm-8 col-md-8 col-lg-8"><h6 style="text-align: left">
-								 <strong><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></strong></h6></div>
-						</div>
-					{% endfor %}
-			   </div>
-			</h4>
+<div class="page-content wc-container">
+	
+	<div class="post">
+		<h1>{{ page.title }}</h1>
+		<p class="post-meta">
+			{% if (page.categories.size > 0 %}
+      <span class="categories">
+      {{ page.categories | array_to_sentence_string }}
+      </span> |
+	    {% endif %}
+	    <span class="post-date">
+    	{{ page.date | date: "%b %-d, %Y" }} 
+	    </span>
+		</p>		
+		<div class="post">
+			{{ content }}
 		</div>
 	</div>
-	{% include disqus.html %}
+
+
+	{% if site.related_posts %}
+	<div class="related">
+		<h4>Related Posts</h2>
+		<ul class="posts">
+		    {% for post in site.related_posts limit:3 %}
+		    <li>
+			  <span>{{ post.date | date_to_string }} &raquo;</span>
+			  <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
+		    </li>
+		    {% endfor %}
+		</ul>
+	</div>
+	{% endif %}
+
+	<div class="post-footer">
+		<div class="column-1">
+			{% if page.previous %}
+				<a href="{{page.previous.url | prepend: site.baseurl | prepend: site.url }}"><< Older</a>
+			{% else %}
+				<span><< Older</span>
+			{% endif %}
+		</div>
+		<div class="column-2"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }} ">Home</a></div>
+		<div class="column-3">
+			{% if page.next %}
+				<a href="{{ page.next.url | prepend: site.baseurl | prepend: site.url }}">Newer >></a>
+			{% else %}
+				<span>Newer >></span>
+			{% endif %}
+		</div>
+	</div>
 </div>
+ 
